--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -233,7 +233,7 @@
     "gpt-35-turbo": "gpt-3.5-turbo",
     "gpt-4": "gpt-4",
     "gpt-4-turbo": "gpt-4-turbo",
-    "gpt-4o": "gpt-4o",
+    "chatgpt-4o-latest": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
     "temperature": "Temperature",
     "temperaturePrompt": "Temperature 越高，生成的文本越有创造性，但也越没条理",
