--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -164,7 +164,7 @@
   },
   "geminiApi": {
     "name": "Gemini API",
-    "gemini-pro": "Gemini-Pro",
+    "gemini-exp-1114": "gemini-exp-1114",
     "gemini-15-pro-latest": "Gemini 1.5 Pro",
     "gemini-15-flash-latest": "Gemini 1.5 Flash",
     "topK": "topK",
